# code_save

./: .env  .env.example  LICENSE  README.md  pyproject.toml
docs/: EXPERIMENT_CACHE_SAVINGS.md  EXPERIMENT_GUIDE.md
scripts/: analyze_experiment.py  run_cache_savings_experiment.py  run_drift_experiment.py
src/safe_codegen/: __init__.py  config.py  runner.py
src/safe_codegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/safe_codegen/agents/: __init__.py  foundation_validators.py  global_convergence.py  module_supervisors.py
src/safe_codegen/cache/: __init__.py  foundation_cache.py  incremental_cache.py
src/safe_codegen/graph/: __init__.py  builder.py  nodes.py  state.py
src/safe_codegen/llm/: __init__.py  base.py  ollama_client.py  openai_client.py
tests/: __init__.py  test_cache.py  test_graph_smoke.py  test_llm_adapters.py
